added web/3d directory

--- a/website/index.html
+++ b/website/index.html
@@ -22,7 +22,7 @@
 
             <div id="midtop">
                 <div id="midtopcontents">
-                    <p><a href="http://data-everywhere.com/3d">Scramble in-progress</a></p>
+                    <p><a href="3d/index.html">Scramble in-progress</a></p>
                     <p><a href="https://github.com/SunKing2/Scramblelovers-Word-Games">open-source on Github</a></p>
                 </div>
             </div> <!-- midtop --> 
